2.3.2011 git
- framework to display patchlevel (if any)

1.3.4 Release notes  1.3.2011 
New feature: it is possible to synchronize from a tag, without need of the query to retrieve the version number
Improvements in the History feature introduced with 1.3.3

People upgrading from 1.3.2 should execute this script:
CREATE TABLE `tbscriptbranchchangelog` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `script_id` int(11) NOT NULL,
  `branch_id` int(11) NOT NULL,
  PRIMARY KEY  (`id`),
  UNIQUE KEY `script_id` (`script_id`,`branch_id`)
) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=1 ;


28.2.2011 git
- submit script has wider entry area for script and comments

27.2.2011 git
- showing data in history also for latest revision
- some more fixes

26.2.2011 git
- each time a synchronization is done, deltasql records the project name in a cookie and retrieves it next time
- added ability to specify a tag in the from field of the synchronization step
- added error message if trying to synchronize from a tag and at the same time specifying the from
 version number. The tag implicitly sets a version number from where to start the synchronization.
- IE8 compatibility fix in Main menu
- updating FAQ on how to upgrade deltasql (by using TAGs, one can easily retrieve the missing scripts to be executed)
- updating manual on project and modules
- recording changes of branches as well in a new table TBSCRIPTBRANCHCHANGELOG, so that it is possible to
 find in history if there were changes in respect to branches

CREATE TABLE `tbscriptbranchchangelog` (
  `id` int(11) NOT NULL AUTO_INCREMENT,
  `script_id` int(11) NOT NULL,
  `branch_id` int(11) NOT NULL,
  PRIMARY KEY  (`id`),
  UNIQUE KEY `script_id` (`script_id`,`branch_id`)
) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=1 ;


1.3.3 Release Notes 25.2.2011
Deltasql is more wiki-like as anyone can edit a script. The history of editing is recorded as well.